--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,7 +36,7 @@ jobs:
       - name: 打包
         run: pnpm build
       # 上传打包文件到远程服务器
-      - name: 上传文件到远程服务器
+      - name: 上传文件到远程服务器1
         uses: zhenyuWang/Upload-File-Action@v1.0.1
         with:
           username: 'root'
